2005-02-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-set-auto-save-file-modes): Set always
	permissions, because there might be an old auto-saved file
	belonging to another original file.  This could be a security
	threat.  Reported by Kjetil Kjernsmo <kjetil@kjernsmo.net>.

	* tramp-smb.el (tramp-smb-open-connection): `executable-find'
	doesn't exist in older Emacsen.  To be checked before applied.

2005-02-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (all): Remove debug construct for
	`with-parsed-tramp-file-name'.
	(tramp-smb-prompt): Prompt can contain spaces inside directory
	names.
	(tramp-smb-handle-delete-directory, tramp-smb-handle-delete-file):
	No error message if DIRECTORY or FILENAME doesn't exist.
	(tramp-smb-open-connection): Check existence of
	`tramp-smb-program'.

2005-02-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-for-operation) Use 'dired-call-process
	but 'dired-call-process-command.  Still the same cut'n'waste
	error.
	(tramp-set-auto-save-file-modes) Check for Emacs 21.3.50 removed.

2005-02-09  Kim F. Storm  <storm@cua.dk>

	Change release version from 21.4 to 22.1 throughout.

2005-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (all): Change all addresses to .gnu.org.

2005-02-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-for-operation) Use 'shell-command but
	'shell.  Cut'n'waste error.  Reported by Vincent Bernat
	<bernat@free.fr>.

2005-01-16  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.47 released.

2005-01-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-operation-not-permitted-regexp) New defcustom,
	catching keep-date problems in cp/scp operations.
	(tramp-handle-copy-file): Don't call `set-file-modes'
	unconditionally.  Specialized functions should know better what is
	necessary.  This improves performance a little bit, and the
	functions could catch errors with `cp -p' and `scp -p'.